# prosper-challenge

./: .gitignore  Dockerfile  README.md  SOLUTION.md  agent.py  agent_flow.md  bot.py  docker-compose.yml  ehr_tools.py  prompts.py  pyproject.toml  task_specialist_agent.py  tool_implementations.py  tool_schemas.py  tools.py
.github/workflows/: tests.yml
ehr-api/: pyproject.toml
ehr-api/app/: database.py  main.py  schemas.py  seed.py
ehr-api/app/routers/: appointments.py  patients.py
ehr-api/migrations/: 001_initial.sql
ehr-api/tests/: conftest.py  fixtures.py
ehr-api/tests/integration/: test_appointments.py  test_docket.py  test_patients.py
evaluation/: README.md  run_eval.py
evaluation/harness/: adapters.py  caller.py  client.py  cost.py  judge.py  metrics.py  patient_simulator.py  runner.py  shim.py  trace.py
evaluation/metrics/: runs_20260628_124027.csv  runs_20260628_124533.csv  runs_20260629_171234.csv  runs_20260629_213330.csv  runs_20260629_233018.csv  summary_20260628_124027.csv  summary_20260628_124533.csv  summary_20260629_171234.csv  summary_20260629_213330.csv  summary_20260629_233018.csv
evaluation/results/: .gitignore  traces_20260629_233018.jsonl
evaluation/scenarios/: db.py  oracle.py  scenarios.py
tests/integration/: conftest.py  test_architectures_integration.py  test_tool_implementations_integration.py
tests/unit/: test_call_guard.py  test_ehr_tools_unit.py  test_prompts.py  test_single_agent.py  test_supervisor_agent.py  test_task_specialist_agent.py  test_tool_definitions.py  (+1 more)
voice_agent/: __init__.py
(+11 files in other folders)
