[project]
name = "prosper-challenge"
version = "0.1.0"
description = "Template repository for clinic appointment scheduling voice agent challenge"
requires-python = ">=3.10"
dependencies = [
    "pipecat-ai[webrtc,daily,silero,elevenlabs,openai,local-smart-turn-v3,runner]",
    "pipecat-ai-cli",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.404,<2",
    "ruff>=0.12.11,<1",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "respx>=0.21",
    "tiktoken>=0.7",
    "asyncpg>=0.30",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]

[tool.uv.workspace]
members = [
    "ehr-api",
]
